# q1-viewer

./: .gitignore  CMakeLists.txt  README.md
q1viewer/: CMakeLists.txt  common.hpp  main.cpp
q1viewer/assets/: quake_ident.hpp  quake_pak.cpp  quake_pak.hpp
